src/test/resources/inspections/probableBugs/not_captured_receiver.v
module probableBugs

struct Foo {
	name string
}

fn (f &Foo) method() {
	spawn fn () {
		println(<error descr="Receiver 'f' is not captured">f</error>.name)
	}()
}

fn (mut f Foo) method2() {
	spawn fn () {
		println(<error descr="Receiver 'f' is not captured">f</error>.name)
	}()
}
